<resources>
  <string name="cat_toc_buttons">Buttons</string>
  <string name="cat_buttons_group" translatable="false">Buttons Group</string>
  <string name="cat_buttons_group_distribution" translatable="false">Buttons Group Distribution</string>
  <string name="cat_buttons_group_runtime" translatable="false">Buttons Group Runtime</string>
  <string name="cat_buttons_toggle_group">Buttons Toggle Group</string>
  <string name="cat_split_button" translatable="false">Split Button</string>
  <string name="cat_buttons_title">Buttons</string>
  <string name="cat_buttons_description">
    Buttons communicate the action that will occur when the user touches them.
    They may display text, imagery, or both.
    Flat buttons and raised buttons are the most commonly used types.
  </string>
  <string name="cat_button_label_enabled">Enabled</string>
  <string name="cat_button_label_disabled">Disabled</string>
  <string name="cat_button_optical_center" translatable="false">Optical Center</string>
  <string name="cat_label_buttons_text"
      description="Title for a section that shows label buttons. [CHAR LIMIT=NONE]">Label Buttons</string>
  <string name="cat_label_buttons_with_icon_text"
      description="Title for a section that shows label buttons with icon. [CHAR LIMIT=NONE]">Icon Label Buttons</string>
  <string name="cat_icon_buttons_text"
      description="Title for a section that shows icon buttons. [CHAR LIMIT=NONE]">Icon Buttons</string>
  <string name="cat_icon_toggle_buttons_text"
      description="Title for a section that shows icon toggle buttons. [CHAR LIMIT=NONE]">Icon Toggle Buttons</string>
  <string name="cat_filled_button_default_text"
      description="Text for filled color variant with a note that it is the default style. [CHAR LIMIT=NONE]">Filled Button (Default)</string>
  <string name="cat_filled_button_text"
      description="Text for filled color variant. [CHAR LIMIT=NONE]">Filled Button</string>
  <string name="cat_tonal_button_text"
      description="Text for tonal color variant. [CHAR LIMIT=NONE]">Tonal Button</string>
  <string name="cat_outlined_button_text"
      description="Text for outlined variant. [CHAR LIMIT=NONE]">Outlined Button</string>
  <string name="cat_text_button_text"
      description="Text for text-only variant. [CHAR LIMIT=NONE]">Text Button</string>
  <string name="cat_elevated_button_text"
      description="Text for elevated variant. [CHAR LIMIT=NONE]">Elevated Button</string>
  <string name="cat_standard_icon_button_text"
      description="Text for standard icon only button. [CHAR LIMIT=NONE]">Standard</string>
  <string name="cat_standard_icon_button_desc"
    description="Description for standard icon only button. [CHAR LIMIT=NONE]">Standard Icon</string>
  <string name="cat_filled_icon_button_text"
      description="Text for filled icon only button. [CHAR LIMIT=NONE]">Filled</string>
  <string name="cat_filled_icon_button_desc"
    description="Description for filled icon only button. [CHAR LIMIT=NONE]">Filled Icon</string>
  <string name="cat_tonal_icon_button_text"
      description="Text for tonal icon only button. [CHAR LIMIT=NONE]">Tonal</string>
  <string name="cat_filled_tonal_icon_button_desc"
    description="Description for filled tonal icon only button. [CHAR LIMIT=NONE]">Tonal Icon</string>
  <string name="cat_outlined_icon_button_text"
      description="Text for outlined icon only button. [CHAR LIMIT=NONE]">Outlined</string>
  <string name="cat_outlined_icon_button_desc"
    description="Description for outlined icon only button. [CHAR LIMIT=NONE]">Outlined Icon</string>
  <string name="cat_button_clicked"
      description="Text for a snackbar that indicates a button was clicked. [CHAR LIMIT=NONE]">Button clicked</string>
  <string name="cat_snackbar_action_button_text"
      description="Text for a snackbar action button. [CHAR LIMIT=NONE]">Done</string>
  <string name="cat_filled_button_xsmall_text"
    description="Text for filled color extra small variant. [CHAR LIMIT=NONE]">Extra Small Button</string>
  <string name="cat_filled_button_small_text"
    description="Text for filled color small variant with a note that it is the default style. [CHAR LIMIT=NONE]">Small Button (Default)</string>
  <string name="cat_filled_button_medium_text"
    description="Text for filled color medium variant. [CHAR LIMIT=NONE]">Medium Button</string>
  <string name="cat_filled_button_large_text"
    description="Text for filled color large variant. [CHAR LIMIT=NONE]">Large Button</string>
  <string name="cat_filled_button_xlarge_text"
    description="Text for filled color extra large variant. [CHAR LIMIT=NONE]">Extra Large Button</string>
  <string name="cat_single_select">Single-select</string>
  <string name="cat_multi_select">Multi-select</string>
  <string name="cat_split_button_subheader_filled" translatable="false">Split button, primary</string>
  <string name="cat_split_button_subheader_filled_tonal" translatable="false">Split button, secondary</string>
  <string name="cat_split_button_subheader_popup_menu" translatable="false">Split button, popup menu</string>
  <string name="cat_split_button_popup_menu_item_one" translatable="false">List item 1</string>
  <string name="cat_split_button_popup_menu_item_two" translatable="false">List item 2</string>
  <string name="cat_split_button_popup_menu_item_three" translatable="false">List item 3</string>
  <string name="cat_icon_only" description="A label for icon only buttons below. [CHAR LIMIT=NONE]">Icon only</string>
  <string name="cat_icon_only_toggle" description="A label for icon only toggle buttons below. [CHAR LIMIT=NONE]">Icon only toggle</string>
  <string name="cat_label_only" description="A label for lebal only buttons below. [CHAR LIMIT=NONE]">Label only</string>
  <string name="cat_label_only_toggle" description="A label for lebal only toggle buttons below. [CHAR LIMIT=NONE]">Label only toggle</string>
  <string name="cat_icon_and_label_mixed" description="A label for icon and label mixed buttons below. [CHAR LIMIT=NONE]">Icon and label mixed</string>
  <string name="cat_icon_and_label_mixed_toggle" description="A label for icon and label mixed toggle buttons below. [CHAR LIMIT=NONE]">Icon and label mixed toggle</string>
  <string description="A label for a spacing slider [CHAR LIMIT=NONE]"
      name="cat_spacing_label">Spacing (dp)</string>
  <string description="A label for a fixed inner corner size slider [CHAR LIMIT=NONE]"
      name="cat_inner_corner_size_label">Fixed inner corners size (0 – 50%)</string>
  <string name="cat_button_label_private" description="A label of an example button representing private access level in the button group demo. [CHAR LIMIT=NONE]">Private</string>
  <string name="cat_button_label_team" description="A label of an example button representing team access level in the button group demo. [CHAR LIMIT=NONE]">Team</string>
  <string name="cat_button_label_everyone" description="A label of an example button respresenting public access level in the button group demo. [CHAR LIMIT=NONE]">Everyone</string>
  <string name="cat_button_label_custom" description="A label of an example button representing custom action in the button group demo. [CHAR LIMIT=NONE]">Custom</string>
  <string name="cat_button_label_cheese" description="A label of an example button representing cheese option in the button group demo. [CHAR LIMIT=NONE]">Cheese</string>
  <string name="cat_button_label_tomatoes" description="A label of an example button representing tomatoes option in the button group demo. [CHAR LIMIT=NONE]">Tomatoes</string>
  <string name="cat_button_label_mushrooms" description="A label of an example button representing mushrooms option in the button group demo. [CHAR LIMIT=NONE]">Mushrooms</string>
  <string name="cat_button_label_spinach" description="A label of an example button representing spinach option in the button group demo. [CHAR LIMIT=NONE]">Spinach</string>
  <string name="cat_button_label_bread" description="A label of an example button representing bread option in the button group demo. [CHAR LIMIT=NONE]">Bread</string>
  <string name="cat_split_button_label" translatable="false">Label</string>
  <string name="cat_split_button_short_label" translatable="false">No</string>
  <string description="A label for an icon-only button [CHAR LIMIT=NONE]"
    name="cat_icon_button_label_add_circle">Add icon</string>
  <string description="A label for an icon-only button [CHAR LIMIT=NONE]"
    name="cat_icon_button_label_favorite">Favorite icon</string>
  <string description="A label for an icon-only button [CHAR LIMIT=NONE]"
    name="cat_icon_button_label_home">Home icon</string>
  <string name="cat_split_button_label_chevron"
    description="A label for an icon-only button [CHAR LIMIT=NONE]">Chevron icon</string>
  <string name="cat_split_button_label_edit" description="The edit icon [CHAR LIMIT=NONE]">Edit icon</string>
  <string description="A label for an icon-only button [CHAR LIMIT=NONE]"
    name="cat_icon_button_label_settings">Settings icon</string>
  <string description="A label for an icon-only button [CHAR LIMIT=NONE]"
    name="cat_icon_button_label_delete_forever">Delete forever icon</string>
  <string description="A label for an icon-only button [CHAR LIMIT=NONE]"
    name="cat_icon_button_label_star">Star icon</string>
  <string name="cat_button_require_selection" translatable="false">Require Selection</string>
  <string name="cat_button_vertical_orientation" translatable="false">Vertical Orientation</string>
  <string name="cat_button_enable" translatable="false">Enabled</string>
  <string name="cat_buttons_fixed_width_text">Buttons with fixed width</string>
  <string name="cat_buttons_dynamic_width">Buttons with dynamic width (1:2:1)</string>
  <string name="cat_buttons_mixed_width">Buttons with mixed width</string>
  <string name="cat_button_previous_icon">previous icon</string>
  <string name="cat_button_play_icon">play icon</string>
  <string name="cat_button_next_icon">next icon</string>
  <string name="cat_button_toggleable">Toggleable</string>
  <string name="cat_button_group_runtime_add_button" description="A label of a button to dynamically add a new button at the end of a group. [CHAR LIMIT=NONE]">Add a new button</string>
  <string name="cat_button_group_runtime_remove_button" description="A label of a button to dynamically remove the last added button from the group. [CHAR LIMIT=NONE]">Remove the last button</string>
  <string name="cat_button_group_set_last_button_checkable_label" description="A label of a switch to set the last button in a button group checkable. [CHAR LIMIT=NONE]">Make last checkable</string>
  <string name="cat_button_group_set_last_button_checked_label" description="A label of a switch to set the last button in a button group checked. [CHAR LIMIT=NONE]">Check last</string>
  <string name="cat_button_group_set_last_button_enabled_label" description="A label of a switch to set the last button in a button group enabled. [CHAR LIMIT=NONE]">Enable last</string>
  <string name="cat_button_group_hide_first_button_label" description="A label of a switch to hide the first button in a button group. [CHAR LIMIT=NONE]">Hide first</string>
  <string-array name="cat_button_group_dynamic_labels">
    <item description="A label for an icon-only button in a overflow menu representing an add action. [CHAR LIMIT=NONE]">Add</item>
    <item description="A label for an icon-only button in a overflow menu representing a like action. [CHAR LIMIT=NONE]">Like</item>
    <item description="A label for an icon-only button in a overflow menu representing a home action. [CHAR LIMIT=NONE]">Home</item>
    <item description="A label for an icon-only button in a overflow menu representing a settings action. [CHAR LIMIT=NONE]">Settings</item>
    <item description="A label for an icon-only button in a overflow menu representing a delete action. [CHAR LIMIT=NONE]">Delete</item>
  </string-array>
</resources>