<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2024 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/cat_label_buttons_text"
      android:textStyle="bold"
      android:textSize="16sp"/>
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingTop="8dp"
      android:text="@string/cat_filled_button_default_text"
      android:textSize="12sp" />
  <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/cat_button_label_enabled" />
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingTop="8dp"
      android:text="@string/cat_tonal_button_text"
      android:textSize="12sp" />
  <Button
      style="?attr/materialButtonTonalStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/cat_button_label_enabled" />
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingTop="8dp"
      android:text="@string/cat_outlined_button_text"
      android:textSize="12sp" />
  <Button
      style="?attr/materialButtonOutlinedStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/cat_button_label_enabled" />
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingTop="8dp"
      android:text="@string/cat_elevated_button_text"
      android:textSize="12sp" />
  <Button
      style="?attr/materialButtonElevatedStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/cat_button_label_enabled" />
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingTop="8dp"
      android:text="@string/cat_text_button_text"
      android:textSize="12sp" />
  <Button
      style="?attr/borderlessButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/cat_button_label_enabled" />
</LinearLayout>
