<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2019 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="8dp"
      android:gravity="center_horizontal"
      android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:text="@string/cat_single_select"
        android:textAppearance="?attr/textAppearanceSubtitle1"/>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true">
      <Button
          style="?attr/materialButtonOutlinedStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/cat_button_label_private"/>
      <Button
          style="?attr/materialButtonOutlinedStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/cat_button_label_team"/>
      <Button
          style="?attr/materialButtonOutlinedStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/cat_button_label_everyone"/>
      <Button
          style="?attr/materialButtonOutlinedStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/cat_button_label_custom"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:text="@string/cat_multi_select"
        android:textAppearance="?attr/textAppearanceSubtitle1"/>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
      <Button
          style="?attr/materialButtonOutlinedStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/cat_button_label_cheese"/>
      <Button
          style="?attr/materialButtonOutlinedStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/cat_button_label_tomatoes"/>
      <Button
          style="?attr/materialButtonOutlinedStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/cat_button_label_mushrooms"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:text="@string/cat_icon_only"
        android:textAppearance="?attr/textAppearanceSubtitle1"/>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/icon_only_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
      <Button
          style="?attr/materialButtonOutlinedStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:minWidth="@dimen/mtrl_min_touch_target_size"
          android:contentDescription="@string/cat_icon_button_label_paint_bucket"
          app:icon="@drawable/ic_colors_24px"
          app:iconPadding="0dp"/>
      <Button
          style="?attr/materialButtonOutlinedStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:minWidth="@dimen/mtrl_min_touch_target_size"
          android:contentDescription="@string/cat_icon_button_label_plus"
          app:icon="@drawable/ic_fab_24px"
          app:iconPadding="0dp"/>
      <Button
          style="?attr/materialButtonOutlinedStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:minWidth="@dimen/mtrl_min_touch_target_size"
          android:contentDescription="@string/cat_icon_button_label_components"
          app:icon="@drawable/ic_components_24px"
          app:iconPadding="0dp"/>
      <Button
          style="?attr/materialButtonOutlinedStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:minWidth="@dimen/mtrl_min_touch_target_size"
          android:contentDescription="@string/cat_icon_button_label_accelerator"
          app:icon="@drawable/ic_accelerator_24px"
          app:iconPadding="0dp"/>
      <Button
          style="?attr/materialButtonOutlinedStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:minWidth="@dimen/mtrl_min_touch_target_size"
          android:contentDescription="@string/cat_icon_button_label_dialog"
          app:icon="@drawable/ic_dialogs_24px"
          app:iconPadding="0dp"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.switchmaterial.SwitchMaterial
      android:id="@+id/switch_toggle"
      android:paddingTop="16dp"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_gravity="center"
      android:checked="false"
      android:enabled="true"
      android:text="@string/cat_button_require_selection" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/orientation_switch_toggle"
        android:paddingTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:checked="false"
        android:enabled="true"
        android:text="@string/cat_button_vertical_orientation" />

  </LinearLayout>
</ScrollView>
