<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2024 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">
  <TextView
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingTop="8dp"
      android:text="@string/cat_icon_buttons_text"
      android:textSize="16sp"/>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="8dp"
      android:paddingBottom="8dp"
      android:gravity="center_horizontal"
      android:orientation="horizontal">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
      <Button
          style="?attr/materialIconButtonStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:contentDescription="@string/cat_standard_icon_button_desc"
          app:icon="@drawable/ic_star_checkable_24"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingTop="4dp"
          android:text="@string/cat_standard_icon_button_text"
          android:textSize="12sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
      <Button
          style="?attr/materialIconButtonFilledStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:contentDescription="@string/cat_filled_icon_button_desc"
          app:icon="@drawable/ic_star_checkable_24"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingTop="4dp"
          android:text="@string/cat_filled_icon_button_text"
          android:textSize="12sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
      <Button
          style="?attr/materialIconButtonFilledTonalStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:contentDescription="@string/cat_filled_tonal_icon_button_desc"
          app:icon="@drawable/ic_star_checkable_24"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingTop="4dp"
          android:text="@string/cat_tonal_icon_button_text"
          android:textSize="12sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
      <Button
          style="?attr/materialIconButtonOutlinedStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:contentDescription="@string/cat_outlined_icon_button_desc"
          app:icon="@drawable/ic_star_checkable_24"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingTop="4dp"
          android:text="@string/cat_outlined_icon_button_text"
          android:textSize="12sp"/>
    </LinearLayout>
  </LinearLayout>
  <TextView
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingTop="8dp"
      android:text="@string/cat_icon_toggle_buttons_text"
      android:textSize="16sp"/>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="8dp"
      android:paddingBottom="8dp"
      android:gravity="center_horizontal"
      android:orientation="horizontal">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
      <Button
          style="?attr/materialIconButtonStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:contentDescription="@string/cat_standard_icon_button_desc"
          android:checkable="true"
          app:icon="@drawable/ic_star_checkable_24"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingTop="4dp"
          android:text="@string/cat_standard_icon_button_text"
          android:textSize="12sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
      <Button
          style="?attr/materialIconButtonFilledStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:contentDescription="@string/cat_filled_icon_button_desc"
          android:checkable="true"
          app:icon="@drawable/ic_star_checkable_24"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingTop="4dp"
          android:text="@string/cat_filled_icon_button_text"
          android:textSize="12sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
      <Button
          style="?attr/materialIconButtonFilledTonalStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:contentDescription="@string/cat_filled_tonal_icon_button_desc"
          android:checkable="true"
          app:icon="@drawable/ic_star_checkable_24"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingTop="4dp"
          android:text="@string/cat_tonal_icon_button_text"
          android:textSize="12sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
      <Button
          style="?attr/materialIconButtonOutlinedStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:contentDescription="@string/cat_outlined_icon_button_desc"
          android:checkable="true"
          app:icon="@drawable/ic_star_checkable_24"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingTop="4dp"
          android:text="@string/cat_outlined_icon_button_text"
          android:textSize="12sp"/>
    </LinearLayout>
  </LinearLayout>
</LinearLayout>
